# tekstide

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE_NOTES.md  ROADMAP.md
crates/tekstide/: Cargo.toml
crates/tekstide-core/: Cargo.toml  README.md
crates/tekstide-core/src/: app.rs  close.rs  command.rs  content.rs  domain.rs  lib.rs  navigation.rs  project.rs  project_board.rs  security.rs  shell.rs
crates/tekstide-core/src/app/: tests.rs
crates/tekstide-core/src/close/: tests.rs
crates/tekstide-core/src/content/: document.rs  edit.rs  open.rs  save.rs  snapshot.rs  tests.rs
crates/tekstide-core/src/content/tests/: edit.rs  mod.rs  open.rs  save.rs
crates/tekstide-core/src/domain/: agent.rs  approval.rs  audit.rs  changeset.rs  ids.rs  ownership.rs  terminal.rs  time.rs  transcript.rs
crates/tekstide-core/src/domain/tests/: agent_lifecycle.rs  audit.rs  constructors.rs  mod.rs  terminal_lifecycle.rs  timestamp.rs
crates/tekstide-core/src/navigation/: tests.rs
crates/tekstide-core/src/project/: content.rs  identity.rs  metadata.rs  recent.rs  root.rs  runtime.rs  session.rs
crates/tekstide-core/src/project/recent/: availability.rs  state.rs  store.rs  timestamp.rs
crates/tekstide-core/src/project/root/: explorer.rs  tests.rs
crates/tekstide-core/src/project/root/explorer/: tests.rs
crates/tekstide-core/src/project/tests/: collections.rs  metadata.rs  mod.rs  references.rs
crates/tekstide-core/src/project_board/: tests.rs
crates/tekstide-core/src/runtime/: terminal.rs
crates/tekstide-core/src/runtime/terminal/: launch.rs  mod.rs  pty.rs  security.rs  termination.rs  tests.rs  types.rs
crates/tekstide-core/src/runtime/terminal/security/: parser.rs  paste.rs  trusted_ui.rs
crates/tekstide-core/src/security/: tests.rs
crates/tekstide-core/src/shell/: tests.rs
crates/tekstide-pty-spike/: Cargo.toml  README.md
crates/tekstide-pty-spike/src/: main.rs  pty.rs  smoke.rs
crates/tekstide/src/: main.rs
crates/tekstide_app/: Cargo.toml
crates/tekstide_core/: Cargo.toml
rfcs/: README.md  future-work.md
rfcs/archive/: README.md
rfcs/done/: 001-product-scope-mvp-and-non-goals.md  002-core-domain-model-projectsession-terminalsession-agentrun-auditevent.md  003-information-architecture-and-ui-mode-model.md  004-security-baseline-and-restricted-mode.md  005-application-shell-and-project-board.md  (+4 more)
rfcs/handoffs/: README.md  (+1 more)
(+61 files in other folders)
