[workspace]
resolver = "3"
members = [
    "crates/tekstide",
    "crates/tekstide-core",
    "crates/tekstide-pty-spike",
]

[workspace.package]
version         = "0.2.0"
edition         = "2024"
license             = "Apache-2.0"
authors             = ["nabbisen"]
repository          = "https://github.com/nabbisen/tekstide"
categories          = ["command-line-utilities", "development-tools"]
keywords            = ["workspace", "developer-tools", "ai", "cli"]

[workspace.dependencies]
tekstide-core               = { version = "0", path = "crates/tekstide-core" }

libc                        = "0.2"

serde                       = { version = "1", features = ["derive"] }
serde_json                  = "1"
uuid                        = { version = "1", features = ["v4"] }
