[package]
name        = "tekstide-core"
description = "Core domain, security, project, and content models for Tekstide."
readme      = "README.md"
version.workspace       = true
edition.workspace       = true
license.workspace       = true
authors.workspace       = true
repository.workspace    = true
categories.workspace    = true
keywords.workspace      = true

[lib]
path = "src/lib.rs"

[dependencies]
serde.workspace             = true
serde_json.workspace        = true
uuid.workspace              = true
