[package]
name        = "tekstide"
description = "Core/shell foundation for a local-first multi-project AI development workbench."
readme      = "../../README.md"
version.workspace       = true
edition.workspace       = true
license.workspace       = true
authors.workspace       = true
repository.workspace    = true
categories.workspace    = true
keywords.workspace      = true

[[bin]]
name = "tekstide"
path = "src/main.rs"

[dependencies]
tekstide-core               = { workspace = true }
